--- a/blocks/search/search.css
+++ b/blocks/search/search.css
@@ -1249,8 +1249,10 @@
 }
 
 .input-container-custom .sf-header-searchstudio-js .sf-form .btn {
-  right: 14px;
-  top: 11px;
+  right: 0;
+  top:0;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
   position: absolute;
   display: inline-block;
@@ -1260,8 +1262,8 @@
   vertical-align: middle;
   user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  border: 0;
+  padding: 0;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
@@ -1275,10 +1277,9 @@
 }
 
 .input-container-custom .sf-header-searchstudio-js .sf-form .btn span {
-  max-width: 28px;
-  height: 28px;
-  width: 28px;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-size: 100%;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1286,7 +1287,7 @@
 
 .input-container-custom .sf-header-searchstudio-js .sf-form span {
   position: absolute;
-  width: 75px;
+  width: 64px;
   display: block;
   float: right;
   top: 0;
@@ -1305,8 +1306,6 @@
   color: #fff;
   display: inline-block;
   font-size: 16px;
-  margin-top: 10px;
-  margin-right: 12px;
 }
 
 .input-container-custom .sf-header-searchstudio-js .sf-form .btn .search-close {
