--- a/blocks/key-facts/key-facts.css
+++ b/blocks/key-facts/key-facts.css
@@ -14,7 +14,8 @@
   justify-content: center;
   padding: 0;
   flex-flow: row wrap;
-  gap: 32px 8px;
+  row-gap: 32px;
+  column-gap: 8px;
   text-align: center;
 }
 
