--- a/styles/styles.css
+++ b/styles/styles.css
@@ -195,6 +195,9 @@
   --easing-exit: cubic-bezier(0.2, 0, 1, 1);
   --easing-standard: cubic-bezier(0.2, 0, 0.1, 1);
 
+  /* Global video */
+  --video-aspect-ratio: 16/9;
+
   /*
     OLD styles
     we need to remove / update once they are not used in the styles
@@ -1615,6 +1618,13 @@ main.blue-contract .section.section-with-title p {
 }
 
 /* Global video block styles */
+.video-iframe {
+  width: 100%;
+  border: 0;
+  aspect-ratio: var(--video-aspect-ratio);
+  display: block;
+}
+
 .v2-video__playback-button,
 .v2-video__mute-controls {
   position: absolute;
