--- a/blocks/v2-content-carousel/v2-content-carousel.css
+++ b/blocks/v2-content-carousel/v2-content-carousel.css
@@ -75,13 +75,17 @@
 }
 
 .v2-content-carousel__figure picture {
+  aspect-ratio: 574/474;
+  display: block;
   background-color: var(--media-background);
   border-radius: var(--border-radius);
 }
 
 .v2-content-carousel__figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: var(--border-radius);
-  aspect-ratio: 574/474;
 }
 
 .v2-content-carousel__figure-text {
