--- a/blocks/v2-resource-gallery/v2-resource-gallery.css
+++ b/blocks/v2-resource-gallery/v2-resource-gallery.css
@@ -88,12 +88,16 @@
   border-radius: var(--border-radius);
 }
 
+.v2-resource-gallery__video-list .v2-resource-gallery__video-image picture {
+  aspect-ratio: 16/9;
+  display: block;
+}
+
 .v2-resource-gallery__video-image img {
-  border-radius: 8px;
-  aspect-ratio: 255/143;
-  object-fit: cover;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  border-radius: var(--border-radius);
 }
 
 .v2-resource-gallery__document-list {
