--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -90,7 +90,7 @@
 .header__link .icon svg,
 .header__close-menu .icon svg {
   height: 24px;
-  width: auto;
+  width: 24px;
   display: block;
 }
 
