--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1106,7 +1106,7 @@ main.blue-contract .section.section-with-title p {
   --button-primary-bg: var(--c-main-black);
   --button-primary-bg-hover: var(--c-grey-700);
   --button-primary-bg-active: var(--c-grey-900);
-  --button-secondary-color: var(--c-main-black);
+  --button-secondary-color: var(--c-text-color);
   --button-secondary-bg: transparent;
   --button-secondary-bg-hover: var(--c-grey-50);
   --button-secondary-bg-active: var(--c-grey-100);
@@ -1299,35 +1299,11 @@ main.blue-contract .section.section-with-title p {
   background-color: var(--button-primary-bg-active);
 }
 
-.redesign-v2 .section--black-background a.button.primary,
-.redesign-v2 .section--black-background button.primary,
-.redesign-v2 a.button.primary.dark,
-.redesign-v2 button.primary.dark {
-  --button-primary-bg: var(--c-white);
-  --button-primary-color: var(--c-main-black);
-}
-
-.redesign-v2 .section--black-background a.button.primary:hover,
-.redesign-v2 .section--black-background button.primary:hover,
-.redesign-v2 a.button.primary.dark:hover,
-.redesign-v2 button.primary.dark:hover {
-  --button-primary-bg: var(--c-grey-200);
-
-  border-color: transparent;
-}
-
-.redesign-v2 .section--black-background a.button.primary:active,
-.redesign-v2 .section--black-background button.primary:active,
-.redesign-v2 a.button.primary.dark:active,
-.redesign-v2 button.primary.dark:active {
-  background-color: var(--c-grey-400);
-}
-
 .redesign-v2 a.button.secondary,
 .redesign-v2 button.secondary {
-  border-color: var(--button-secondary-border);
   color: var(--button-secondary-color);
   background-color: var(--button-secondary-bg);
+  border-color: var(--button-secondary-border);
 }
 
 .redesign-v2 a.button.secondary:hover,
@@ -1340,39 +1316,17 @@ main.blue-contract .section.section-with-title p {
   background-color: var(--button-secondary-bg-active);
 }
 
-.redesign-v2 .section--black-background a.button.secondary,
-.redesign-v2 .section--black-background button.secondary,
-.redesign-v2 a.button.secondary.dark,
-.redesign-v2 button.secondary.dark {
-  --button-secondary-border: var(--c-white);
-  --button-secondary-color: var(--c-white);
-}
-
-.redesign-v2 .section--black-background a.button.secondary:hover,
-.redesign-v2 .section--black-background button.secondary:hover,
-.redesign-v2 a.button.secondary.dark:hover,
-.redesign-v2 button.secondary.dark:hover {
-  --button-secondary-bg-hover: var(--c-grey-900);
-}
-
-.redesign-v2 .section--black-background a.button.secondary:active,
-.redesign-v2 .section--black-background button.secondary:active,
-.redesign-v2 a.button.secondary.dark:active,
-.redesign-v2 button.secondary.dark:active {
-  --button-secondary-border: var(--c-grey-800);
-}
-
 .redesign-v2 a.button.tertiary,
 .redesign-v2 button.tertiary {
+  color: var(--button-tertiary-color);
   padding: 8px 0;
   height: 40px;
-  color: var(--button-tertiary-color);
 }
 
 .redesign-v2 a.button.tertiary:hover,
 .redesign-v2 button.tertiary:hover {
-  text-decoration: underline;
   background-color: var(--button-tertiary-bg-hover);
+  text-decoration: underline;
 }
 
 .redesign-v2 a.button.tertiary:active,
@@ -1380,38 +1334,6 @@ main.blue-contract .section.section-with-title p {
   background-color: var(--button-tertiary-bg-active);
 }
 
-.redesign-v2 .section--black-background a.button.tertiary,
-.redesign-v2 .section--black-background button.tertiary,
-.redesign-v2 a.button.tertiary.dark,
-.redesign-v2 button.tertiary.dark {
-  --button-tertiary-color: var(--c-white);
-}
-
-.redesign-v2 .section--black-background a.button.tertiary:hover,
-.redesign-v2 .section--black-background button.tertiary:hover,
-.redesign-v2 a.button.tertiary.dark:hover,
-.redesign-v2 button.tertiary.dark:hover {
-  --button-tertiary-bg-hover: var(--c-grey-900);
-}
-
-.redesign-v2 .section--black-background a.button.tertiary:active,
-.redesign-v2 .section--black-background button.tertiary:active,
-.redesign-v2 a.button.tertiary.dark:active,
-.redesign-v2 button.tertiary.dark:active {
-  --button-tertiary-bg-active: var(--c-grey-800);
-}
-
-.redesign-v2 .section--gray-background a.button.tertiary:hover,
-.redesign-v2 .section--gray-background button.tertiary:hover {
-  --button-tertiary-bg-hover: var(--c-grey-100);
-}
-
-.redesign-v2 .section--gray-background a.button.tertiary:active,
-.redesign-v2 .section--gray-background button.tertiary:active {
-  --button-tertiary-bg-active: var(--c-grey-200);
-}
-
-/* Marketing button styles */
 .redesign-v2 a.button.marketing,
 .redesign-v2 button.marketing {
   background-color: var(--button-marketing-bg);
@@ -1428,26 +1350,32 @@ main.blue-contract .section.section-with-title p {
   background-color: var(--button-marketing-bg-active);
 }
 
-.redesign-v2 .section--black-background a.button.marketing,
-.redesign-v2 .section--black-background button.marketing,
-.redesign-v2 a.button.marketing.dark,
-.redesign-v2 button.marketing.dark {
-  --button-marketing-bg: var(--c-cta-blue-default);
+/* stylelint-disable-next-line no-descending-specificity */
+.redesign-v2 .section--black-background  a.button,
+.redesign-v2 .section--black-background  button,
+.redesign-v2 a.button.dark,
+.redesign-v2 button.dark {
+  --button-primary-color: var(--c-main-black);
+  --button-primary-bg: var(--c-white);
+  --button-primary-bg-hover: var(--c-grey-200);
+  --button-primary-bg-active: var(--c-grey-400);
+  --button-secondary-color: var(--c-white);
+  --button-secondary-bg-hover: var(--c-grey-900);
+  --button-secondary-bg-active: var(--c-grey-800);
+  --button-secondary-border: var(--c-white);
+  --button-tertiary-color: var(--c-white);
+  --button-tertiary-bg-hover: var(--c-grey-900);
+  --button-tertiary-bg-active: var(--c-grey-800);
   --button-marketing-color: var(--c-main-black);
-}
-
-.redesign-v2 .section--black-background a.button.marketing:hover,
-.redesign-v2 .section--black-background button.marketing:hover,
-.redesign-v2 a.button.marketing.dark:hover,
-.redesign-v2 button.marketing.dark:hover {
-  --button-marketing-b-hover: #76baff;
-}
-
-.redesign-v2 .section--black-background a.button.marketing:active,
-.redesign-v2 .section--black-background button.marketing:active,
-.redesign-v2 a.button.marketing.dark:active,
-.redesign-v2 button.marketing.dark:active {
+  --button-marketing-bg: var(--c-cta-blue-default);
+  --button-marketing-bg-hover: #76baff;
   --button-marketing-bg-active: #1f78d1;
+}
+
+/* stylelint-disable-next-line no-descending-specificity */
+.redesign-v2 .section--gray-background  a.button,
+.redesign-v2 .section--gray-background  button {
+  --button-tertiary-bg-hover: var(--c-grey-100);
 }
 
 .redesign-v2 :is(h1, h2, h3, h4, h5, h6) a:any-link::after,
